# foundit-rest-api/app/api/index.js
@@ -5,5 +5,6 @@ const BASE_URL = env.constants.API_BASE_URL
 
 module.exports = (app) => {
     app.use(`${BASE_URL}/items`, require('./items/controller'))
+    app.use(`${BASE_URL}/notify`, require('./notify/controller'))
     app.use('/', require('./index/controller'))
 }
