# foundit-rest-api/app/api/swagger.json
@@ -175,6 +175,32 @@
         }
       }
     },
+    "/notify/": {
+      "get": {
+        "tags": [
+          "Notify"
+        ],
+        "description": "Add email to AWS SNS topic",
+        "parameters": [
+          {
+            "name": "email",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/": {
       "get": {
         "tags": [
